# vixen

./: .envrc  BUILD_C.md  CRATES_IO.md  Cargo.toml  HANDOFF.md  PLAN.md  README.md  SYN_ELIMINATION_PLAN.md  test_cas.sh
.claude/: CLAUDE.md
.config/: nextest.toml
.handoffs/: 2024-12-24-unix-socket-migration.md  syn-elimination-plan.md
.zed/: settings.json
crates/vx/: Cargo.toml
crates/vx-aether/: Cargo.toml
crates/vx-aether-proto/: Cargo.toml
crates/vx-aether/src/: action_graph.rs  error.rs  executor.rs  inputs.rs  main.rs  queries.rs  service.rs  tests.rs  tui.rs
crates/vx-cache/: Cargo.toml
crates/vx-cas-proto/: Cargo.toml
crates/vx-casd/: Cargo.toml
crates/vx-casd/examples/: test_client.rs
crates/vx-casd/src/: http.rs  lib.rs  main.rs  registry.rs  service.rs  tarball.rs  toolchain.rs  types.rs  utils.rs
crates/vx-cass/: Cargo.toml
crates/vx-cass-proto/: Cargo.toml
crates/vx-cass-proto/src/: lib.rs
crates/vx-cass/examples/: test_client.rs
crates/vx-cass/src/: hash_reader.rs  main.rs  registry.rs  service.rs  toolchain.rs  types.rs
crates/vx-cc/: Cargo.toml
crates/vx-cc/src/: depfile.rs  lib.rs  tests.rs
crates/vx-daemon/: Cargo.toml
crates/vx-daemon-proto/: Cargo.toml
crates/vx-daemon/src/: db.rs  error.rs  lib.rs  main.rs  queries.rs  service.rs  tests.rs
crates/vx-exec-proto/: Cargo.toml
crates/vx-execd/: Cargo.toml
crates/vx-execd/src/: error.rs  extract.rs  lib.rs  main.rs  registry.rs  service.rs  toolchain.rs
crates/vx-io/: Cargo.toml
crates/vx-manifest/: Cargo.toml  test_workspace_dep.toml
crates/vx-manifest/examples/: test_dep_parsing.rs
crates/vx-manifest/src/: full.rs  lib.rs  lockfile.rs
crates/vx-manifest/tests/: bearcove_manifests.rs  copy_fixtures.sh
crates/vx-manifest/tests/fixtures/: a__buck__third-party__rust__Cargo.toml  arborium-clean__crates__arborium-highlight__Cargo.toml  arborium-clean__crates__arborium-host__Cargo.toml  arborium-clean__crates__arborium-plugin-runtime__Cargo.toml  arborium-clean__crates__arborium-query__Cargo.toml  arborium-clean__crates__arborium-sysroot__Cargo.toml  arborium-clean__crates__arborium-test-harness__Cargo.toml  arborium-clean__crates__arborium-theme__Cargo.toml  arborium-clean__crates__arborium-tree-sitter__Cargo.toml  arborium-clean__crates__arborium-wire__Cargo.toml  arborium-clean__xtask__Cargo.toml  arborium__crates__arborium-docsrs-demo__target__package__arborium-docsrs-demo-0.0.0__Cargo.toml  arborium__crates__arborium-host__Cargo.toml  arborium__crates__arborium-mdbook__Cargo.toml  arborium__crates__arborium-plugin-runtime__Cargo.toml  arborium__crates__arborium-query__Cargo.toml  arborium__crates__arborium-rustdoc__Cargo.toml  arborium__crates__arborium-sysroot__Cargo.toml  arborium__crates__arborium-sysroot__target__package__arborium-sysroot-0.0.0__Cargo.toml  arborium__crates__arborium-theme__Cargo.toml  arborium__crates__arborium-theme__target__package__arborium-theme-0.0.0__Cargo.toml  arborium__crates__arborium-tree-sitter__Cargo.toml  arborium__crates__arborium-wire__Cargo.toml  arborium__crates__arborium__target__package__arborium-2.1.1__Cargo.toml  arborium__crates__miette-arborium__Cargo.toml  autotrait__target__package__autotrait-0.2.2__Cargo.toml  autotrait__target__package__autotrait-0.2.3__Cargo.toml  cove__buck-out__v2__gen__root__0f022ffcc05211a2__third-party____arborium-html-2.3.2.crate____arborium-html-2.3.2.crate__Cargo.toml  cove__buck-out__v2__gen__root__0f022ffcc05211a2__third-party____arborium-json-2.3.2.crate____arborium-json-2.3.2.crate__Cargo.toml  cove__buck-out__v2__gen__root__0f022ffcc05211a2__third-party____arborium-toml-2.3.2.crate____arborium-toml-2.3.2.crate__Cargo.toml  cove__buck-out__v2__gen__root__0f022ffcc05211a2__third-party____const-serialize-0.7.2.crate____const-serialize-0.7.2.crate__Cargo.toml  cove__buck-out__v2__gen__root__0f022ffcc05211a2__third-party____const-str-0.7.1.crate____const-str-0.7.1.crate__Cargo.toml  cove__buck-out__v2__gen__root__0f022ffcc05211a2__third-party____dioxus-asset-resolver-0.7.2.crate____dioxus-asset-resolver-0.7.2.crate__Cargo.toml  cove__buck-out__v2__gen__root__0f022ffcc05211a2__third-party____dioxus-cli-config-0.7.2.crate____dioxus-cli-config-0.7.2.crate__Cargo.toml  cove__buck-out__v2__gen__root__0f022ffcc05211a2__third-party____dioxus-devtools-0.7.2.crate____dioxus-devtools-0.7.2.crate__Cargo.toml  cove__buck-out__v2__gen__root__0f022ffcc05211a2__third-party____dioxus-document-0.7.2.crate____dioxus-document-0.7.2.crate__Cargo.toml  cove__buck-out__v2__gen__root__0f022ffcc05211a2__third-party____dioxus-history-0.7.2.crate____dioxus-history-0.7.2.crate__Cargo.toml  cove__buck-out__v2__gen__root__0f022ffcc05211a2__third-party____dioxus-interpreter-js-0.7.2.crate____dioxus-interpreter-js-0.7.2.crate__Cargo.toml  cove__buck-out__v2__gen__root__0f022ffcc05211a2__third-party____dioxus-logger-0.7.2.crate____dioxus-logger-0.7.2.crate__Cargo.toml  cove__buck-out__v2__gen__root__0f022ffcc05211a2__third-party____dioxus-router-0.7.2.crate____dioxus-router-0.7.2.crate__Cargo.toml  (+182 more)
crates/vx-oort/: Cargo.toml
crates/vx-oort-proto/: Cargo.toml
crates/vx-rhea/: Cargo.toml
crates/vx-rhea/src/: error.rs  extract.rs  main.rs  registry.rs  service.rs  service_vfs.rs  toolchain.rs  vfs.rs
crates/vx-rs/: Cargo.toml
crates/vx-rs/src/: build_script.rs  cache_key.rs  crate_graph.rs  depfile.rs  exec_action.rs  input_set.rs  lib.rs  module_scanner.rs  snapshot.rs
crates/vx-tarball/: Cargo.toml
crates/vx-tarball/src/: lib.rs
crates/vx-toolchain/: Cargo.toml
crates/vx-toolchain/src/: lib.rs  rust.rs  tests.rs  zig.rs
crates/vx-vfs/: Cargo.toml
crates/vx-vfs/src/: main.rs
crates/vx/src/: main.rs  tui.rs
crates/vx/tests/: build_reports.rs  cache_basics.rs  cache_correctness.rs  cache_persistence.rs  error_handling.rs  multi_crate.rs
crates/vx/tests/harness/: mod.rs
internal/: COMPONENTS.md  C_BUILD_DESIGN_ANSWERS.md  C_BUILD_DESIGN_QUESTION.md  DESIGN.md  HERMETIC_TOOLCHAINS.md  INTEGRATE.md  ROADMAP.md  SERVICE.md  SERVICE_P1.md  SERVICE_P1_B.md
xtask/: Cargo.toml
(+28 files in other folders)
