[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/vx"

[workspace.dependencies]
# internal crates
vx-cas-proto = { path = "crates/vx-cas-proto" }
vx-cc = { path = "crates/vx-cc" }
vx-exec-proto = { path = "crates/vx-exec-proto" }
vx-manifest = { path = "crates/vx-manifest" }
vx-daemon = { path = "crates/vx-daemon" }
vx-daemon-proto = { path = "crates/vx-daemon-proto" }
vx-casd = { path = "crates/vx-casd" }
vx-execd = { path = "crates/vx-execd" }
vx-report = { path = "crates/vx-report" }
vx-toolchain = { path = "crates/vx-toolchain" }
vx-toolchain-proto = { path = "crates/vx-toolchain-proto" }

# facet ecosystem
facet = { path = "../../../../bearcove/facet/facet" }
facet-args = { path = "../../../../bearcove/facet/facet-args" }
facet-json = { path = "../../../../bearcove/facet/facet-json" }
facet-toml = { path = "../../../../bearcove/facet/facet-toml" }
facet-value = { path = "../../../../bearcove/facet/facet-value" }

# incremental computation
picante = { path = "../picante/crates/picante", features = ["macros"] }

# RPC
rapace = { path = "../rapace/crates/rapace" }

# hashing
blake3 = "1"
hex = "0.4"

# error handling
eyre = "0.6"
thiserror = "2"

# async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# terminal
owo-colors = "4"

# time
jiff = "0.2"

# paths
camino = "1"

# serialization
serde = "1"
serde_json = "1"

# testing
tempfile = "3"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compile dependencies with optimizations even in dev builds.
# This dramatically speeds up CPU-intensive operations like decompression (xz2/lzma)
# and hashing (sha2, blake3) which dominate toolchain acquisition time.
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
facet = { path = "../../../../bearcove/facet/facet" }
facet-core = { path = "../../../../bearcove/facet/facet-core" }
facet-macros = { path = "../../../../bearcove/facet/facet-macros" }
facet-macros-impl = { path = "../../../../bearcove/facet/facet-macros-impl" }
facet-macro-parse = { path = "../../../../bearcove/facet/facet-macro-parse" }
facet-macro-types = { path = "../../../../bearcove/facet/facet-macro-types" }
facet-reflect = { path = "../../../../bearcove/facet/facet-reflect" }
facet-json = { path = "../../../../bearcove/facet/facet-json" }
facet-toml = { path = "../../../../bearcove/facet/facet-toml" }
facet-args = { path = "../../../../bearcove/facet/facet-args" }
facet-postcard = { path = "../../../../bearcove/facet/facet-postcard" }
facet-value = { path = "../../../../bearcove/facet/facet-value" }
