[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/vx"

[workspace.dependencies]
# internal crates
vx-cache = { path = "crates/vx-cache" }
vx-cass-proto = { path = "crates/vx-cass-proto" }
vx-cc = { path = "crates/vx-cc" }
vx-rhea-proto = { path = "crates/vx-rhea-proto" }
vx-manifest = { path = "crates/vx-manifest" }
vx-aether-proto = { path = "crates/vx-aether-proto" }
vx-report = { path = "crates/vx-report" }
vx-io = { path = "crates/vx-io" }
vx-tarball = { path = "crates/vx-tarball" }
vx-toolchain = { path = "crates/vx-toolchain" }

# facet ecosystem
facet = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["jiff02", "camino"] }
facet-args = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-toml = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-value = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-postcard = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["jiff02", "camino"] }
facet-cargo-toml = { git = "https://github.com/bearcove/facet-cargo-toml", branch = "main" }

# incremental computation
picante = { git = "https://github.com/bearcove/picante", branch = "main", features = ["macros"] }

# RPC
rapace = { git = "https://github.com/bearcove/rapace", branch = "main" }

# process management
ur-taking-me-with-you = { git = "https://github.com/bearcove/rapace", branch = "main" }

# hashing
blake3 = "1"
hex = "0.4"

# error handling
eyre = "0.6"
thiserror = "2"
miette = "7"

# async
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "time", "fs", "process", "sync", "signal"] }
tokio-test-lite = "1"
futures-util = "0.3"

# terminal
owo-colors = "4"

# time
jiff = "0.2"

# paths
camino = "1"

# testing
tempfile = "3"

# logging
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }

# Compile dependencies with optimizations even in dev builds.
# This dramatically speeds up CPU-intensive operations like decompression (xz2/lzma)
# and hashing (sha2, blake3) which dominate toolchain acquisition time.
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-core = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-macros = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-macros-impl = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-macro-parse = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-macro-types = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-reflect = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-toml = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-args = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-postcard = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-value = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-format = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-format-postcard = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-path = { git = "https://github.com/facet-rs/facet", branch = "main" }
