[package]
name = "vx-casd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vx-casd"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { workspace = true }
facet = { workspace = true }
facet-json = { workspace = true }
rapace = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }
camino = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
xz2 = "0.1"
tar = "0.4"
flate2 = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
hex = "0.4"

vx-cas-proto = { workspace = true }
vx-toolchain-proto = { workspace = true }
vx-toolchain = { workspace = true }
vx-registry-proto = { workspace = true }
