[package]
name = "vx-casd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vx-casd"
path = "src/main.rs"

[dependencies]
blake3 = { workspace = true }
camino = { workspace = true }
jiff = { workspace = true }
eyre = { workspace = true }
facet = { workspace = true }
facet-json = { workspace = true }
flate2 = "1"
hex = "0.4"
rapace = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
tar = "0.4"
tempfile.workspace = true
tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vx-cas-proto = { workspace = true }
vx-io = { workspace = true }
vx-tarball = { workspace = true }
vx-toolchain = { workspace = true }
