[package]
name = "vx-casd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vx-casd"
path = "src/main.rs"

[dependencies]
blake3 = { workspace = true }
camino = { workspace = true }
jiff = { workspace = true }
eyre = { workspace = true }
facet = { workspace = true }
facet-json = { workspace = true }
flate2 = "1"
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1.5", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "native-tokio", "ring", "tls12"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
rapace = { workspace = true }
sha2 = "0.10"
tar = "0.4"
tempfile.workspace = true
tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vx-cas-proto = { workspace = true }
vx-io = { workspace = true }
vx-tarball = { workspace = true }
vx-toolchain = { workspace = true }
