[package]
name = "vx-cass-proto"
version.workspace = true
edition.workspace = true

[dependencies]
facet = { workspace = true }
rapace = { workspace = true }
facet-postcard = { workspace = true, features = ["camino"] }
blake3 = { workspace = true }
camino = { workspace = true }
jiff = { workspace = true }
