[package]
name = "vx-cc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = { workspace = true }
camino = { workspace = true }
facet = { workspace = true }
thiserror = { workspace = true }
vx-cass-proto = { workspace = true }

[dev-dependencies]
