[package]
name = "vx-execd"
version.workspace = true
edition.workspace = true

[dependencies]
facet = { workspace = true }
rapace = { workspace = true }
tokio = { workspace = true }
camino = { workspace = true }
eyre = { workspace = true }
jiff = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
futures-util = { workspace = true }

vx-cas-proto = { workspace = true }
vx-cc = { workspace = true }
vx-exec-proto = { workspace = true }
vx-toolchain-proto = { workspace = true }
vx-registry-proto = { workspace = true }

# For tar.xz streaming extraction
tar = "0.4"
xz2 = "0.1"
flate2 = "1"

# For copy-on-write/reflink file copying
clonetree = "0.0.2"
