[package]
name = "vx-execd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vx-execd"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { workspace = true }
facet = { workspace = true }
rapace = { workspace = true }
tokio = { workspace = true }
camino = { workspace = true }
eyre = { workspace = true }
jiff = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
futures-util = { workspace = true }

vx-cas-proto = { workspace = true }
vx-cc = { workspace = true }
vx-exec-proto = { workspace = true }
vx-tarball = { workspace = true }


# For copy-on-write/reflink file copying
clonetree = "0.0.2"
