[package]
name = "vx-manifest"
version.workspace = true
edition.workspace = true

[dependencies]
facet = { workspace = true }
facet-cargo-toml = { workspace = true }
camino = { workspace = true }
miette = { version = "7.6.0", default-features = false, features = ["derive", "fancy-no-backtrace"] }

[dev-dependencies]
tempfile.workspace = true
