[package]
name = "vx-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = { workspace = true }
camino = { workspace = true }
thiserror = { workspace = true }
ra-ap-rustc_lexer = "0.144.0"
vx-cas-proto = { path = "../vx-cas-proto" }

[dev-dependencies]
tempfile = { workspace = true }
