[package]
name = "vx-tarball"
version.workspace = true
edition.workspace = true

[dependencies]
camino = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

async-compression = { version = "0.4", features = ["tokio", "gzip", "xz"] }
hex = "0.4"
pin-project-lite = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
tokio-tar = "0.3"
tokio-util = { version = "0.7", features = ["compat", "io"] }
