[package]
name = "vx-toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.5.5"
camino = "1.1.9"
eyre = "0.6.12"
facet = { workspace = true }
facet-toml = { workspace = true }
facet-value = { workspace = true }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["fs", "process"] }
tracing = "0.1.41"
vx-cas-proto = { path = "../vx-cas-proto" }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt"] }
