[package]
name = "vx-toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.8.2"
camino = "1.2.2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
eyre = "0.6.12"
facet = { workspace = true }
facet-json = { workspace = true }
facet-toml = { workspace = true }
facet-value = { workspace = true }
lzma-rs = "0.3"
tar = "0.4"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "process"] }
tracing = "0.1.44"
vx-cass-proto = { workspace = true }
walkdir = "2.5"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt"] }
