[package]
name = "vx-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vx-vfs"
path = "src/main.rs"

[dependencies]
# fs-kitty VFS protocol
fs-kitty-proto = { path = "../../../fs-kitty/crates/fs-kitty-proto" }

# RPC
rapace = { workspace = true }

# Serialization
facet = { workspace = true }

# vixen CAS integration
vx-cass-proto = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
camino = { workspace = true }
