[package]
name = "vx"
version.workspace = true
edition.workspace = true

[dependencies]
facet = { workspace = true }
facet-args = { workspace = true }
facet-json = { workspace = true }
eyre = { workspace = true }
owo-colors = { workspace = true }
camino = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rapace = { workspace = true }
ur-taking-me-with-you = { workspace = true }
indicatif = "0.18"

vx-aether-proto = { workspace = true }
vx-io = { workspace = true }
vx-report = { workspace = true }
miette = { version = "7.6.0", default-features = false, features = ["fancy-no-backtrace"] }
miette-arborium = { version = "2.4.5", features = ["lang-toml", "lang-rust"] }

[dev-dependencies]
tempfile = { workspace = true }
test-log = { version = "0.2", features = ["trace"] }
